# telephony-mcp-server

./: .dockerignore  .env  .gitignore  ARTICLE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  telephony_server.py
.github/workflows/: 01-black.yml  02-ruff.yml  pylint.yml
resources/: claude_desktop_config.json  section_2_workflow.md  section_6_workflow.md
servers/: callback_server.py  telephony_server.py
utils/: auth.py
